[gd_scene load_steps=42 format=3 uid="uid://b60n4gdtp0md8"]

[ext_resource type="Script" uid="uid://cs0mia65okmoj" path="res://Assets/Scenes/Enemies Scene/Gude/gude.gd" id="1_v4eh7"]
[ext_resource type="Texture2D" uid="uid://nrth2hkfambo" path="res://Assets/sprites/enemies/Gude/Attack.png" id="2_5efl1"]
[ext_resource type="Texture2D" uid="uid://dmuwvd52fcw3e" path="res://Assets/sprites/enemies/Gude/Attack_Two.png" id="2_e3km5"]
[ext_resource type="Texture2D" uid="uid://usis3mt81w2y" path="res://Assets/sprites/enemies/Gude/Explosion.png" id="3_10khh"]
[ext_resource type="Texture2D" uid="uid://cspeskbe1tihf" path="res://Assets/sprites/enemies/Gude/Death.png" id="3_e3km5"]
[ext_resource type="Texture2D" uid="uid://bmbr6o4v4sqne" path="res://Assets/sprites/enemies/Gude/Reload.png" id="4_4p1gg"]
[ext_resource type="Texture2D" uid="uid://cppsqieoc6qtd" path="res://Assets/sprites/enemies/Gude/GUDE_IDLE.png" id="4_10khh"]
[ext_resource type="Texture2D" uid="uid://cqwvqydli0t5o" path="res://Assets/sprites/enemies/Gude/Gude_Walk.png" id="5_4p1gg"]
[ext_resource type="FontFile" uid="uid://dhhjcp1rxp6gj" path="res://Assets/Fonts/minecraft_font.ttf" id="6_5efl1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0tvb1"]
atlas = ExtResource("2_e3km5")
region = Rect2(0, 151, 166, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcqc5"]
atlas = ExtResource("2_e3km5")
region = Rect2(166, 151, 166, 151)

[sub_resource type="AtlasTexture" id="AtlasTexture_e041v"]
atlas = ExtResource("3_10khh")
region = Rect2(0, 166, 250, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k4ij"]
atlas = ExtResource("4_4p1gg")
region = Rect2(1, 10, 250, 159)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jios"]
atlas = ExtResource("4_4p1gg")
region = Rect2(250, 0, 250, 166)

[sub_resource type="AtlasTexture" id="AtlasTexture_vapnw"]
atlas = ExtResource("4_4p1gg")
region = Rect2(0, 331, 250, 147)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ip1i"]
atlas = ExtResource("4_4p1gg")
region = Rect2(250, 331, 250, 147)

[sub_resource type="AtlasTexture" id="AtlasTexture_f43j5"]
atlas = ExtResource("2_5efl1")
region = Rect2(332, 0, 166, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_no6if"]
atlas = ExtResource("2_5efl1")
region = Rect2(0, 153, 166, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_d53hf"]
atlas = ExtResource("2_5efl1")
region = Rect2(332, 153, 166, 153)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4eh7"]
atlas = ExtResource("3_e3km5")
region = Rect2(0, 0, 166, 157)

[sub_resource type="AtlasTexture" id="AtlasTexture_5efl1"]
atlas = ExtResource("3_e3km5")
region = Rect2(166, 0, 166, 157)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3km5"]
atlas = ExtResource("3_e3km5")
region = Rect2(332, 0, 166, 157)

[sub_resource type="AtlasTexture" id="AtlasTexture_10khh"]
atlas = ExtResource("3_e3km5")
region = Rect2(0, 164, 166, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p1gg"]
atlas = ExtResource("3_e3km5")
region = Rect2(166, 164, 166, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0jxv"]
atlas = ExtResource("3_e3km5")
region = Rect2(332, 164, 166, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i0cr"]
atlas = ExtResource("3_e3km5")
region = Rect2(0, 328, 166, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnpuh"]
atlas = ExtResource("3_e3km5")
region = Rect2(166, 328, 166, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ujke"]
atlas = ExtResource("4_10khh")
region = Rect2(0, 0, 166, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_3avil"]
atlas = ExtResource("4_10khh")
region = Rect2(166, 0, 166, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu4up"]
atlas = ExtResource("4_10khh")
region = Rect2(332, 0, 166, 162)

[sub_resource type="AtlasTexture" id="AtlasTexture_65kke"]
atlas = ExtResource("5_4p1gg")
region = Rect2(0, 0, 166, 157)

[sub_resource type="AtlasTexture" id="AtlasTexture_v47n8"]
atlas = ExtResource("5_4p1gg")
region = Rect2(166, 0, 166, 157)

[sub_resource type="AtlasTexture" id="AtlasTexture_knvax"]
atlas = ExtResource("5_4p1gg")
region = Rect2(332, 0, 166, 157)

[sub_resource type="AtlasTexture" id="AtlasTexture_h40sn"]
atlas = ExtResource("5_4p1gg")
region = Rect2(0, 163, 166, 163)

[sub_resource type="AtlasTexture" id="AtlasTexture_oajuq"]
atlas = ExtResource("5_4p1gg")
region = Rect2(166, 163, 166, 163)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvrld"]
atlas = ExtResource("5_4p1gg")
region = Rect2(332, 163, 166, 163)

[sub_resource type="SpriteFrames" id="SpriteFrames_51nig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tvb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcqc5")
}],
"loop": true,
"name": &"ATTACK",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e041v")
}],
"loop": false,
"name": &"Bum",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k4ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jios")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vapnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ip1i")
}],
"loop": false,
"name": &"Reload",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f43j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no6if")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d53hf")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4eh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5efl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3km5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10khh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p1gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0jxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i0cr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnpuh")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ujke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3avil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu4up")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_65kke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v47n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knvax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h40sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oajuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvrld")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4eh7"]
size = Vector2(60, 84.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_5m4qq"]
radius = 30.149628

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3km5"]
bg_color = Color(0.83571845, 1.732707e-06, 4.813075e-07, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5efl1"]
size = Vector2(438, 84)

[node name="Gude" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_v4eh7")
max_health = 300

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.9073486e-06, 9.536743e-07)
scale = Vector2(0.5512048, 0.54545456)
sprite_frames = SubResource("SpriteFrames_51nig")
animation = &"attack"
frame = 2
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_v4eh7")

[node name="Hitbox" type="Area2D" parent="." groups=["enemy_hitbox"]]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_5m4qq")
debug_color = Color(0.83314943, 0.37929574, 0.2595622, 0.41960785)

[node name="FloorDetector" type="RayCast2D" parent="."]
target_position = Vector2(30, 44)
collision_mask = 71

[node name="WallDetector" type="RayCast2D" parent="."]
target_position = Vector2(46, 0)
collision_mask = 69

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -27.0
offset_top = -42.0
offset_right = 27.0
offset_bottom = -36.0
theme_override_styles/fill = SubResource("StyleBoxFlat_e3km5")
max_value = 80.0
value = 80.0
show_percentage = false

[node name="HealthBarNumber" type="Label" parent="."]
offset_left = -20.0
offset_top = -69.0
offset_right = 20.0
offset_bottom = -46.0
theme_override_fonts/font = ExtResource("6_5efl1")

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_5efl1")
debug_color = Color(0.6205848, 0.37470156, 0.96057934, 0.41960785)
